src/parser/ProgramParser.ts
// Generated from Program.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import ProgramListener from "./ProgramListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class ProgramParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly EXPORT = 24;
	public static readonly EXPAND = 25;
	public static readonly KEYOF = 26;
	public static readonly IMPORT = 27;
	public static readonly FROM = 28;
	public static readonly NULL = 29;
	public static readonly PRIMITIVE = 30;
	public static readonly NUM = 31;
	public static readonly ID = 32;
	public static readonly STRING = 33;
	public static readonly DOC_LINE_COMMENT = 34;
	public static readonly DOC_BLOCK_COMMENT = 35;
	public static readonly WS = 36;
	public static readonly LINE_COMMENT = 37;
	public static readonly BLOCK_COMMENT = 38;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_import_body = 2;
	public static readonly RULE_alias = 3;
	public static readonly RULE_generic_params = 4;
	public static readonly RULE_type = 5;
	public static readonly RULE_tuple = 6;
	public static readonly RULE_tuple_item = 7;
	public static readonly RULE_pair = 8;
	public static readonly RULE_json_value = 9;
	public static readonly RULE_json_object = 10;
	public static readonly RULE_json_pair = 11;
	public static readonly RULE_json_arr = 12;
	public static readonly literalNames: (string | null)[] = [ null, "';'", 
                                                            "'<'", "','", 
                                                            "'>'", "'='", 
                                                            "'{'", "'}'", 
                                                            "'as'", "'('", 
                                                            "')'", "'['", 
                                                            "']'", "'.'", 
                                                            "'with'", "'&'", 
                                                            "'|'", "'...'", 
                                                            "'?'", "':'", 
                                                            "'in'", "'matches'", 
                                                            "'true'", "'false'", 
                                                            "'export'", 
                                                            "'expand'", 
                                                            "'keyof'", "'import'", 
                                                            "'from'", "'null'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "EXPORT", "EXPAND", 
                                                             "KEYOF", "IMPORT", 
                                                             "FROM", "NULL", 
                                                             "PRIMITIVE", 
                                                             "NUM", "ID", 
                                                             "STRING", "DOC_LINE_COMMENT", 
                                                             "DOC_BLOCK_COMMENT", 
                                                             "WS", "LINE_COMMENT", 
                                                             "BLOCK_COMMENT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "statement", "import_body", "alias", "generic_params", "type", 
		"tuple", "tuple_item", "pair", "json_value", "json_object", "json_pair", 
		"json_arr",
	];
	public get grammarFileName(): string { return "Program.g4"; }
	public get literalNames(): (string | null)[] { return ProgramParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return ProgramParser.symbolicNames; }
	public get ruleNames(): string[] { return ProgramParser.ruleNames; }
	public get serializedATN(): number[] { return ProgramParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, ProgramParser._ATN, ProgramParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, ProgramParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 32;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 24)) & ~0x1F) === 0 && ((1 << (_la - 24)) & 265) !== 0)) {
				{
				{
				this.state = 26;
				localctx._statement = this.statement();
				localctx._stmts.push(localctx._statement);
				this.state = 28;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===1) {
					{
					this.state = 27;
					this.match(ProgramParser.T__0);
					}
				}

				}
				}
				this.state = 34;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 35;
			this.match(ProgramParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, ProgramParser.RULE_statement);
		let _la: number;
		try {
			this.state = 62;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				localctx = new DefContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 38;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===24) {
					{
					this.state = 37;
					(localctx as DefContext)._export_ = this.match(ProgramParser.EXPORT);
					}
				}

				this.state = 40;
				(localctx as DefContext)._name = this.match(ProgramParser.ID);
				this.state = 51;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===2) {
					{
					this.state = 41;
					this.match(ProgramParser.T__1);
					this.state = 42;
					(localctx as DefContext)._ID = this.match(ProgramParser.ID);
					(localctx as DefContext)._params.push((localctx as DefContext)._ID);
					this.state = 47;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la===3) {
						{
						{
						this.state = 43;
						this.match(ProgramParser.T__2);
						this.state = 44;
						(localctx as DefContext)._ID = this.match(ProgramParser.ID);
						(localctx as DefContext)._params.push((localctx as DefContext)._ID);
						}
						}
						this.state = 49;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 50;
					this.match(ProgramParser.T__3);
					}
				}

				this.state = 53;
				this.match(ProgramParser.T__4);
				this.state = 54;
				(localctx as DefContext)._val = this.type_(0);
				}
				break;
			case 2:
				localctx = new ImportContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 55;
				this.match(ProgramParser.IMPORT);
				this.state = 56;
				(localctx as ImportContext)._body = this.import_body();
				this.state = 57;
				this.match(ProgramParser.FROM);
				this.state = 58;
				(localctx as ImportContext)._path = this.match(ProgramParser.STRING);
				}
				break;
			case 3:
				localctx = new ExportContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 60;
				this.match(ProgramParser.EXPORT);
				this.state = 61;
				(localctx as ExportContext)._val = this.type_(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public import_body(): Import_bodyContext {
		let localctx: Import_bodyContext = new Import_bodyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, ProgramParser.RULE_import_body);
		let _la: number;
		try {
			this.state = 77;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 32:
				localctx = new ImportDefaultContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 64;
				(localctx as ImportDefaultContext)._item = this.match(ProgramParser.ID);
				}
				break;
			case 6:
				localctx = new ImportSymbolsContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 65;
				this.match(ProgramParser.T__5);
				this.state = 74;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===32) {
					{
					this.state = 66;
					(localctx as ImportSymbolsContext)._alias = this.alias();
					(localctx as ImportSymbolsContext)._items.push((localctx as ImportSymbolsContext)._alias);
					this.state = 71;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la===3) {
						{
						{
						this.state = 67;
						this.match(ProgramParser.T__2);
						this.state = 68;
						(localctx as ImportSymbolsContext)._alias = this.alias();
						(localctx as ImportSymbolsContext)._items.push((localctx as ImportSymbolsContext)._alias);
						}
						}
						this.state = 73;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 76;
				this.match(ProgramParser.T__6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public alias(): AliasContext {
		let localctx: AliasContext = new AliasContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, ProgramParser.RULE_alias);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 79;
			localctx._name = this.match(ProgramParser.ID);
			this.state = 82;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===8) {
				{
				this.state = 80;
				this.match(ProgramParser.T__7);
				this.state = 81;
				localctx._as_ = this.match(ProgramParser.ID);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public generic_params(): Generic_paramsContext {
		let localctx: Generic_paramsContext = new Generic_paramsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, ProgramParser.RULE_generic_params);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 84;
			localctx._type_ = this.type_(0);
			localctx._items.push(localctx._type_);
			this.state = 89;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===3) {
				{
				{
				this.state = 85;
				this.match(ProgramParser.T__2);
				this.state = 86;
				localctx._type_ = this.type_(0);
				localctx._items.push(localctx._type_);
				}
				}
				this.state = 91;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public type_(): TypeContext;
	public type_(_p: number): TypeContext;
	// @RuleVersion(0)
	public type_(_p?: number): TypeContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: TypeContext = new TypeContext(this, this._ctx, _parentState);
		let _prevctx: TypeContext = localctx;
		let _startState: number = 10;
		this.enterRecursionRule(localctx, 10, ProgramParser.RULE_type, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 127;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 29:
			case 30:
				{
				localctx = new PrimitiveContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;

				this.state = 93;
				(localctx as PrimitiveContext)._val = this._input.LT(1);
				_la = this._input.LA(1);
				if(!(_la===29 || _la===30)) {
				    (localctx as PrimitiveContext)._val = this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				}
				break;
			case 31:
				{
				localctx = new NumberContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 94;
				(localctx as NumberContext)._val = this.match(ProgramParser.NUM);
				}
				break;
			case 33:
				{
				localctx = new StringContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 95;
				(localctx as StringContext)._val = this.match(ProgramParser.STRING);
				}
				break;
			case 6:
				{
				localctx = new ObjectContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 96;
				this.match(ProgramParser.T__5);
				this.state = 108;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 11)) & ~0x1F) === 0 && ((1 << (_la - 11)) & 6291457) !== 0)) {
					{
					this.state = 97;
					(localctx as ObjectContext)._pair = this.pair();
					(localctx as ObjectContext)._items.push((localctx as ObjectContext)._pair);
					this.state = 102;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 11, this._ctx);
					while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
						if (_alt === 1) {
							{
							{
							this.state = 98;
							this.match(ProgramParser.T__0);
							this.state = 99;
							(localctx as ObjectContext)._pair = this.pair();
							(localctx as ObjectContext)._items.push((localctx as ObjectContext)._pair);
							}
							}
						}
						this.state = 104;
						this._errHandler.sync(this);
						_alt = this._interp.adaptivePredict(this._input, 11, this._ctx);
					}
					this.state = 106;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===1) {
						{
						this.state = 105;
						this.match(ProgramParser.T__0);
						}
					}

					}
				}

				this.state = 110;
				this.match(ProgramParser.T__6);
				}
				break;
			case 11:
				{
				localctx = new TupleTypeContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 111;
				this.tuple();
				}
				break;
			case 32:
				{
				localctx = new NamedTypeContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 112;
				this.match(ProgramParser.ID);
				this.state = 117;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 14, this._ctx) ) {
				case 1:
					{
					this.state = 113;
					this.match(ProgramParser.T__1);
					this.state = 114;
					this.generic_params();
					this.state = 115;
					this.match(ProgramParser.T__3);
					}
					break;
				}
				}
				break;
			case 9:
				{
				localctx = new ParensContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 119;
				this.match(ProgramParser.T__8);
				this.state = 120;
				this.type_(0);
				this.state = 121;
				this.match(ProgramParser.T__9);
				}
				break;
			case 26:
				{
				localctx = new KeyofContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 123;
				this.match(ProgramParser.KEYOF);
				this.state = 124;
				this.type_(4);
				}
				break;
			case 25:
				{
				localctx = new ExpandContext(this, localctx);
				this._ctx = localctx;
				_prevctx = localctx;
				this.state = 125;
				this.match(ProgramParser.EXPAND);
				this.state = 126;
				this.type_(3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 151;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 17, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 149;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 16, this._ctx) ) {
					case 1:
						{
						localctx = new IntersectionContext(this, new TypeContext(this, _parentctx, _parentState));
						(localctx as IntersectionContext)._l = _prevctx;
						this.pushNewRecursionContext(localctx, _startState, ProgramParser.RULE_type);
						this.state = 129;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 130;
						this.match(ProgramParser.T__14);
						this.state = 131;
						(localctx as IntersectionContext)._r = this.type_(3);
						}
						break;
					case 2:
						{
						localctx = new UnionContext(this, new TypeContext(this, _parentctx, _parentState));
						(localctx as UnionContext)._l = _prevctx;
						this.pushNewRecursionContext(localctx, _startState, ProgramParser.RULE_type);
						this.state = 132;
						if (!(this.precpred(this._ctx, 1))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
						}
						this.state = 133;
						this.match(ProgramParser.T__15);
						this.state = 134;
						(localctx as UnionContext)._r = this.type_(2);
						}
						break;
					case 3:
						{
						localctx = new ListContext(this, new TypeContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, ProgramParser.RULE_type);
						this.state = 135;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 136;
						this.match(ProgramParser.T__10);
						this.state = 137;
						this.match(ProgramParser.T__11);
						}
						break;
					case 4:
						{
						localctx = new IndexContext(this, new TypeContext(this, _parentctx, _parentState));
						(localctx as IndexContext)._val = _prevctx;
						this.pushNewRecursionContext(localctx, _startState, ProgramParser.RULE_type);
						this.state = 138;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 139;
						this.match(ProgramParser.T__10);
						this.state = 140;
						(localctx as IndexContext)._key = this.type_(0);
						this.state = 141;
						this.match(ProgramParser.T__11);
						}
						break;
					case 5:
						{
						localctx = new SubscriptContext(this, new TypeContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, ProgramParser.RULE_type);
						this.state = 143;
						if (!(this.precpred(this._ctx, 6))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 6)");
						}
						this.state = 144;
						this.match(ProgramParser.T__12);
						this.state = 145;
						(localctx as SubscriptContext)._member = this.match(ProgramParser.ID);
						}
						break;
					case 6:
						{
						localctx = new WithContext(this, new TypeContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, ProgramParser.RULE_type);
						this.state = 146;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 147;
						this.match(ProgramParser.T__13);
						this.state = 148;
						this.json_object();
						}
						break;
					}
					}
				}
				this.state = 153;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 17, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public tuple(): TupleContext {
		let localctx: TupleContext = new TupleContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, ProgramParser.RULE_tuple);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 154;
			this.match(ProgramParser.T__10);
			this.state = 166;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 6)) & ~0x1F) === 0 && ((1 << (_la - 6)) & 261621801) !== 0)) {
				{
				this.state = 155;
				localctx._tuple_item = this.tuple_item();
				localctx._items.push(localctx._tuple_item);
				this.state = 160;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 18, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 156;
						this.match(ProgramParser.T__2);
						this.state = 157;
						localctx._tuple_item = this.tuple_item();
						localctx._items.push(localctx._tuple_item);
						}
						}
					}
					this.state = 162;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 18, this._ctx);
				}
				this.state = 164;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===3) {
					{
					this.state = 163;
					this.match(ProgramParser.T__2);
					}
				}

				}
			}

			this.state = 168;
			this.match(ProgramParser.T__11);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public tuple_item(): Tuple_itemContext {
		let localctx: Tuple_itemContext = new Tuple_itemContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, ProgramParser.RULE_tuple_item);
		try {
			this.state = 173;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 6:
			case 9:
			case 11:
			case 25:
			case 26:
			case 29:
			case 30:
			case 31:
			case 32:
			case 33:
				localctx = new ItemContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 170;
				this.type_(0);
				}
				break;
			case 17:
				localctx = new RestContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 171;
				this.match(ProgramParser.T__16);
				this.state = 172;
				this.type_(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public pair(): PairContext {
		let localctx: PairContext = new PairContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, ProgramParser.RULE_pair);
		let _la: number;
		try {
			this.state = 201;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 25, this._ctx) ) {
			case 1:
				localctx = new StringPairContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 175;
				(localctx as StringPairContext)._key = this._input.LT(1);
				_la = this._input.LA(1);
				if(!(_la===32 || _la===33)) {
				    (localctx as StringPairContext)._key = this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				this.state = 177;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===18) {
					{
					this.state = 176;
					(localctx as StringPairContext)._optional = this.match(ProgramParser.T__17);
					}
				}

				this.state = 179;
				this.match(ProgramParser.T__18);
				this.state = 180;
				(localctx as StringPairContext)._val = this.type_(0);
				}
				break;
			case 2:
				localctx = new TypePairContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 181;
				this.match(ProgramParser.T__10);
				this.state = 182;
				(localctx as TypePairContext)._name = this.match(ProgramParser.ID);
				this.state = 183;
				this.match(ProgramParser.T__19);
				this.state = 184;
				this.type_(0);
				this.state = 185;
				this.match(ProgramParser.T__11);
				this.state = 187;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===18) {
					{
					this.state = 186;
					(localctx as TypePairContext)._opt = this.match(ProgramParser.T__17);
					}
				}

				this.state = 189;
				this.match(ProgramParser.T__18);
				this.state = 190;
				(localctx as TypePairContext)._val = this.type_(0);
				}
				break;
			case 3:
				localctx = new PatternPairContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 192;
				this.match(ProgramParser.T__10);
				this.state = 193;
				(localctx as PatternPairContext)._name = this.match(ProgramParser.ID);
				this.state = 196;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===21) {
					{
					this.state = 194;
					this.match(ProgramParser.T__20);
					this.state = 195;
					(localctx as PatternPairContext)._match = this.type_(0);
					}
				}
